--- a/view/F1.html
+++ b/view/F1.html
@@ -27,10 +27,25 @@
   </div>
   <div class="col-50">
     <h1><strong>Personajes:</strong></h1>
-    <p>Max Verstappen: Max Verstappen es un destacado piloto de carreras neerlandés que compite en la Fórmula 1 para el equipo Red Bull Racing. Reconocido por su habilidad, valentía y competitividad.</p>
-    <p>Lewis Hmilton: Lewis Hamilton es un renombrado piloto de carreras británico que compite en la Fórmula 1 para el equipo Mercedes-AMG Petronas Formula One Team. Nacido el 7 de enero de 1985 en Stevenage, Inglaterra, Hamilton es uno de los pilotos más exitosos en la historia de la Fórmula 1.</p>
-    <p>Fernando Alonso:
-        Fernando Alonso es un destacado piloto de carreras español conocido por su exitosa carrera en la Fórmula 1. Nacido el 29 de julio de 1981 en Oviedo, España, Alonso ha logrado numerosos éxitos en el automovilismo a lo largo de su carrera.</p>
+    <table>
+      <tr>
+        <td>Fernando Alonso</td>
+        <td><img src="../img/alonso.jpeg" alt="Imagen 1"></td>
+        <td>Fernando Alonso es un destacado piloto de carreras español conocido por su exitosa carrera en la Fórmula 1. Nacido el 29 de julio de 1981 en Oviedo, España, Alonso ha logrado numerosos éxitos en el automovilismo a lo largo de su carrera</td>
+      </tr>
+      <tr>
+        <td>Lewis Hamilton</td>
+        <td><img src="../img/hamilton.jpeg" alt="Imagen 2"></td>
+        <td> Lewis Hamilton es un renombrado piloto de carreras británico que compite en la Fórmula 1 para el equipo Mercedes-AMG Petronas Formula One Team. Nacido el 7 de enero de 1985 en Stevenage, Inglaterra, Hamilton es uno de los pilotos más exitosos en la historia de la Fórmula 1.
+        </td>
+      </tr>
+      <tr>
+        <td>Max Verstappen</td>
+        <td><img src="../img/verstappemn.jpeg" alt="Imagen 3"></td>
+        <td>Max Verstappen es un destacado piloto de carreras neerlandés que compite en la Fórmula 1 para el equipo Red Bull Racing. Reconocido por su habilidad, valentía y competitividad.
+        </td>
+      </tr>
+    </table>
   </div>
   <button onclick="window.history.back()">INICIO</button>
 </body>
