--- a/view/FIFA24.html
+++ b/view/FIFA24.html
@@ -27,9 +27,25 @@
   </div>
   <div class="col-50">
     <h1><strong>Personajes(Modo de Juego):</strong></h1>
-    <p>Ultimate Team: En este modo, los jugadores pueden crear su propio equipo de fútbol personalizado utilizando cartas de jugadores obtenidas a través de paquetes de cartas virtuales o mediante la participación en desafíos y eventos en el juego.</p>
-    <p>Modo Carrera: Es un modo de juego donde los jugadores pueden tomar el control de un equipo de fútbol como entrenador o gerente y dirigirlo hacia el éxito a lo largo de múltiples temporadas. </p>
-    <p>Volta:  es un modo de juego introducido en la serie FIFA que se centra en el fútbol callejero y el estilo de juego urbano. Los jugadores pueden crear y personalizar sus propios personajes, y competir en partidos rápidos y emocionantes en campos callejeros</p>
+    <table>
+      <tr>
+        <td>Ultimate Team</td>
+        <td><img src="../img/UM.jpeg" alt="Imagen 1"></td>
+        <td>En este modo, los jugadores pueden crear su propio equipo de fútbol personalizado utilizando cartas de jugadores obtenidas a través de paquetes de cartas virtuales o mediante la participación en desafíos y eventos en el juego.
+        </td>
+      </tr>
+      <tr>
+        <td>Modo Carrera</td>
+        <td><img src="../img/carrera.jpeg" alt="Imagen 2"></td>
+        <td>Es un modo de juego donde los jugadores pueden tomar el control de un equipo de fútbol como entrenador o gerente y dirigirlo hacia el éxito a lo largo de múltiples temporadas.
+        </td>
+      </tr>
+      <tr>
+        <td>Volta Football</td>
+        <td><img src="../img/volta.jpeg" alt="Imagen 3"></td>
+        <td>Es un modo de juego introducido en la serie FIFA que se centra en el fútbol callejero y el estilo de juego urbano. Los jugadores pueden crear y personalizar sus propios personajes, y competir en partidos rápidos y emocionantes en campos callejeros</td>
+      </tr>
+    </table>
   </div>
   <button onclick="window.history.back()">INICIO</button>
 </body>
