--- a/view/GTAV.html
+++ b/view/GTAV.html
@@ -28,9 +28,23 @@
   </div>
   <div class="col-50">
     <h1><strong>Personajes:</strong></h1>
-    <p>Michael: Es un hombre de mediana edad que alguna vez fue un exitoso ladrón de bancos, pero ahora vive una vida suburbana acomodada en Los Santos, una parodia de Los Ángeles.</p>
-    <p>Trevor: Trevor es un ex piloto militar convertido en narcotraficante y líder de una banda criminal en el desierto de Blaine County, en la ficticia región de San Andreas.</p>
-    <p>Franklin: Franklin busca escapar de su vida de crimen y pobreza trabajando como recaudador de deudas para un concesionario de coches de lujo</p>
+    <table>
+      <tr>
+        <td>Michael</td>
+        <td><img src="../img/michael.jpeg" alt="Michael"></td>
+        <td>Es un ex ladrón de bancos retirado que vive bajo el programa de protección de testigos en Los Santos, inspirado en Los Angeles. A pesar de sus intentos de llevar una vida tranquila y legal con su familia, se encuentra insatisfecho y aburrido. </td>
+      </tr>
+      <tr>
+        <td>Trevor</td>
+        <td><img src="../img/trevor.jpeg" alt="Trevor"></td>
+        <td>Es un ex compañero de crimen de Michael, y es el personaje más impredecible y violento del trío. Vive en una caravana en las afueras de Los Santos y dirige una pequeña empresa de narcotráfico.</td>
+      </tr>
+      <tr>
+        <td>Franklin</td>
+        <td><img src="../img/franklin.jpeg" alt="Franklin"></td>
+        <td>Es un joven afroamericano que trabaja como repo man para un concesionario de autos en Los Santos. Está buscando una salida de su vida de crimen y violencia en el barrio donde creció</td>
+      </tr>
+    </table>
   </div>
   <button onclick="window.history.back()">INICIO</button>
 </body>
