--- a/view/MINECRAFT.html
+++ b/view/MINECRAFT.html
@@ -27,9 +27,25 @@
   </div>
   <div class="col-50">
     <h1><strong>Personajes</strong></h1>
-    <p>Steve: Es el personaje principal y jugable en el mundo de Minecraft.Generalmente se representa como un humano con camiseta azul y pantalones azules. Los jugadores controlan a Steve mientras exploran, construyen y sobreviven en el mundo generado aleatoriamente de "Minecraft" </p>
-    <p>Aldeanos: Los aldeanos son personajes no jugables que se encuentran en aldeas generadas aleatoriamente en el mundo de "Minecraft". Estos personajes tienen una apariencia humana simplificada y realizan diversas actividades dentro de la aldea, como trabajar en campos, criar animales o comerciar con los jugadores.  </p>
-    <p>Creeper: Los creepers son criaturas icónicas y hostiles en el mundo de "Minecraft". Se caracterizan por su apariencia verde y su habilidad para explotar cuando están cerca de los jugadores, causando daño y destrucción.</p>
+    <table>
+      <tr>
+        <td>Steve</td>
+        <td><img src="../img/steve.jpeg" alt="Imagen 1"></td>
+        <td>Es el personaje principal y jugable en el mundo de Minecraft.Generalmente se representa como un humano con camiseta azul y pantalones azules. Los jugadores controlan a Steve mientras exploran.
+        </td>
+      </tr>
+      <tr>
+        <td>Creeper</td>
+        <td><img src="../img/creeper.jpeg" alt="Imagen 2"></td>
+        <td>Los creepers son criaturas icónicas y hostiles en el mundo de "Minecraft". Se caracterizan por su apariencia verde y su habilidad para explotar cuando están cerca de los jugadores, causando daño y destrucción.</td>
+      </tr>
+      <tr>
+        <td>Aldeano</td>
+        <td><img src="../img/aldeano.jpeg" alt="Imagen 3"></td>
+        <td>Los aldeanos son personajes no jugables que se encuentran en aldeas generadas aleatoriamente en el mundo de "Minecraft". Estos personajes tienen una apariencia humana simplificada y realizan diversas actividades dentro de la aldea, como trabajar en campos, criar animales o comerciar con los jugadores.
+        </td>
+      </tr>
+    </table>
   </div>
   <button onclick="window.history.back()">INICIO</button>
 </body>
