--- a/view/NBA2K24.html
+++ b/view/NBA2K24.html
@@ -27,9 +27,25 @@
   </div>
   <div class="col-50">
     <h1><strong>Personajes</strong></h1>
-    <p>Jugadores de la NBA:  Estos son los atletas reales de la NBA, representados con gran detalle y realismo en el juego. Incluyen estrellas actuales como LeBron James, Kevin Durant y Stephen Curry, así como leyendas del pasado como Michael Jordan y Magic Johnson.</p>
-    <p>Personajes personalizados: En modos como MiCarrera y MiEquipo, los jugadores pueden crear y personalizar sus propios personajes, que pueden ser jugadores de baloncesto profesionales, gerentes generales o entrenadores.</p>
-    <p>Entrenadores y personal técnico: Además de los jugadores, el juego también presenta entrenadores y otros miembros del personal técnico de los equipos de la NBA, que pueden desempeñar un papel en la gestión y el desarrollo de los equipos en modos como MiCarrera y MiGM.</p>
+    <table>
+      <tr>
+        <td>Jugadores de la NBA</td>
+        <td><img src="../img/jugadores.jpeg" alt="Imagen 1"></td>
+        <td>Estos son los atletas reales de la NBA, representados con gran detalle y realismo en el juego. Incluyen estrellas actuales como LeBron James, Kevin Durant y Stephen Curry, así como leyendas del pasado como Michael Jordan y Magic Johnson.
+        </td>
+      </tr>
+      <tr>
+        <td>Personajes personalizados</td>
+        <td><img src="../img/personajes.jpeg" alt="Imagen 2"></td>
+        <td>En modos como MiCarrera y MiEquipo, los jugadores pueden crear y personalizar sus propios personajes, que pueden ser jugadores de baloncesto profesionales, gerentes generales o entrenadores.
+        </td>
+      </tr>
+      <tr>
+        <td>Entrenadores y personal técnico</td>
+        <td><img src="../img/entrenador.jpeg" alt="Imagen 3"></td>
+        <td>Además de los jugadores, el juego también presenta entrenadores y otros miembros del personal técnico de los equipos de la NBA, que pueden desempeñar un papel en la gestión y el desarrollo de los equipos en modos como MiCarrera y MiGM.</td>
+      </tr>
+    </table>
   </div>
   <button onclick="window.history.back()">INICIO</button>
 </body>
