--- a/view/MINECRAFT.html
+++ b/view/MINECRAFT.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../CSS/style.index.css">
-    <link rel="stylesheet" type="text/css" href="../CSS/style.videojocs.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.index.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.videojocs.css">
     <link rel="icon" href="../img/minecraftjpeg.jpeg" type="image/x-icon">
     <title>Minecraft</title>
 </head>
